--- a/themes/evans-lake/style.css
+++ b/themes/evans-lake/style.css
@@ -1391,7 +1391,7 @@ p {
   -ms-flex-align: center;
       align-items: center;
   background-size: cover;
-  height: 80vh;
+  height: 85vh;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: column;
@@ -1405,14 +1405,11 @@ p {
       margin-bottom: 2.5rem; } }
   .home-hero .fa-angle-down {
     background-color: transparent;
-    border-radius: 50%;
     color: #fff;
     cursor: pointer;
     font-size: 3.5rem;
-    left: 50%;
-    padding: 0 .5rem;
     position: absolute;
-    top: 70%;
+    bottom: 15%;
     transform: translateX(-50%); }
     @media (min-width: 815px) {
       .home-hero .fa-angle-down {
@@ -1529,15 +1526,16 @@ p {
 .flickity-slider .carousel-cell.activities {
   border-left: 1.5rem solid #fff;
   border-right: 1.5rem solid #fff;
+  margin: 0;
   width: 100%; }
   @media (min-width: 815px) {
     .flickity-slider .carousel-cell.activities {
       border: none;
-      margin-left: .4rem;
+      margin: .4rem;
       width: 24%; } }
 
 .main-carousel {
-  margin-bottom: 2rem; }
+  margin-bottom: 3rem; }
   .main-carousel .flickity-prev-next-button {
     box-shadow: none;
     color: transparent; }
@@ -1566,6 +1564,12 @@ p {
   @media (min-width: 815px) {
     .main-carousel.activities .flickity-prev-next-button.next {
       right: -50px; } }
+
+.main-carousel.activities .flickity-page-dots {
+  display: block; }
+  @media (min-width: 815px) {
+    .main-carousel.activities .flickity-page-dots {
+      display: none; } }
 
 .single-container {
   margin: 2rem 0;
